--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
 					<span class="focus-input100"></span>
 				</div>
 
+				<label class="label-input100" for="email">email</label>
+				<div class="wrap-input100 validate-input">
+					<input id="email" class="input100" type="text" name="email" placeholder="Your Email">
+					<span class="focus-input100"></span>
+				</div>
+
+
 				<label class="label-input100" for="phone">Phone Number</label>
 				<div class="wrap-input100">
 					<input id="phone" class="input100" type="text" name="phone" placeholder="preferably whatsapp number">
